Attepted to fix images displaying too big in Chrome
Attepted to fix images displaying too big in Chrome

--- a/css/style.css
+++ b/css/style.css
@@ -360,6 +360,8 @@ btn:visited
     .thumbnail
     {
         margin: auto;
+        width: 80%;
+        
     }
 }
 
